Closing Checklist filters, Optimization of code of closing checklist , statuses fixing

--- a/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
+++ b/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
@@ -6,6 +6,9 @@
             [value]="item.value">
             {{item.name}} 
             </option>
+            <option [value]="-1">
+                <button class="btn btn-primary" >+AddNew</button>
+            </option>
         </select>   
     </div>
   
