Profile Picture , and ui fixes on closing checklist screen.

--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -1,11 +1,30 @@
-<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid"> 
     <div class="row">
+        <div class="kt-subheader kt-grid__item">
+            <div [class]="containerClass">
+                <div class="kt-subheader__main">
+                    <h3 class="kt-subheader__title">
+                        <img src="./assets/media/ClosingCheckList/clipboard.svg" alt="clipboard">
+                        <span>Checklist</span>
+                    </h3>
+                    <span class="kt-subheader__separator kt-subheader__separator--v"></span>
+                    <span class="kt-subheader__desc">
+                        Create a Task
+                    </span>
+                </div>
+                <div class="kt-subheader__toolbar">
+                    <div class="kt-subheader__wrapper">
+                        <!-- <button class="btn btn-primary"><i class="fa fa-plus"></i></button> -->
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col-lg-12">
             <div class="kt-portlet" id="kt_portlet">
                 <div class="kt-portlet__head">
                     <div class="kt-portlet__head-label">
                         <h3 class="kt-portlet__head-title">
-                            Create A Task
+                            Create a Task
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
