--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -82,9 +82,10 @@
                                         <div class="form-group">
                                             <select class="form-control border-grey" (change)="filterByStatus($event)" id="exampleFormControlSelect1">
                                                 <option value="0">Status</option>
-                                                <option value="1">Open</option>
-                                                <option value="2">Complete</option>
-                                                <option value="3">Inprogress</option>
+                                                <option value="1">Not Started</option>
+                                                <option value="2">In Process</option>
+                                                <option value="3">On Hold</option>
+                                                <option value="4">Completed</option>
                                             </select>
                                            
                                         </div>
@@ -96,14 +97,7 @@
                                                 </option>
                                             </select>
                                         </div>
-                                        <div class="form-group">
-                                            <!-- <select class="form-control border-grey" id="exampleFormControlSelect3">
-                                                <option>Date</option>
-                                                <option>option2</option>
-                                                <option>option3</option>
-                                                <option>option4</option>
-                                                <option>option5</option>
-                                            </select> -->
+                                        <div class="form-group">                                          
                                             <input id="titleFilter" (ngModelChange)="filterByDate($event)" class="form-control border-grey"
                                              name="titleFilter" [(ngModel)]="titleFilter"
                                             type="text" bsDatepicker class="form-control" />
@@ -177,10 +171,11 @@
                                                 <select onclick="console.log('test')" (change)="ChangeStatus($event.target.value,j.id)"
                                                     class="form-control border-0 {{j.StatusColor}} text-white">
                                                     <option value="" selected disabled hidden>
-                                                        {{j.status}}</option>
-                                                    <option value="1">Open</option>
-                                                    <option value="2">Complete</option>
-                                                    <option value="3">Inprogress</option>
+                                                        {{j.status}}</option>                                                   
+                                                        <option value="1">Not Started</option>
+                                                        <option value="2">In Process</option>
+                                                        <option value="3">On Hold</option>
+                                                        <option value="4">Completed</option>
                                                 </select>
                                             </form>
                                         </td>
