--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -21,17 +21,15 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="form-group">
+                                    <div class="form-group category-selector">
                                         <label>Category</label>
-                                        <select (change)="routerEvent(value)" [(ngModel)]="getTaskForEdit.categoryId" id="categories" name="categories" class="form-control input-medium select2-search select2-search--inline"  >
-                                            <option  *ngFor="let item of category;" 
-                                            [value]="item.value">
-                                                {{item.name}}
-                                            </option>
-                                            <option [value]="-1">
-                                                <button class="btn btn-primary" >+AddNew</button>
-                                            </option>
-                                        </select>   
+                                        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{categoryName}}</button>
+                                        <div class="dropdown-menu" [(ngModel)]="categoryName" >
+                                            <a class="dropdown-item" *ngFor="let item of categoriesList" (click)="categoryClick(item.value,item.name)" >
+                                                {{item.name}}</a>
+                                            <div class="dropdown-divider"></div>
+                                            <a class="dropdown-item" (click)="routeToAddNewCategory()">+AddNew</a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -39,7 +37,7 @@
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="form-group">
                                             <form class="container">
-                                                <input [(ngModel)]="getTaskForEdit.closingMonth._d" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
+                                                <input [(ngModel)]="getTaskForEdit.closingMonth._d" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM'}" (onShown)="onOpenCalendar($event)">
                                                 </form>
                                         </div>
                                     </div> 
@@ -211,7 +209,7 @@
                                         <label>Ends on</label>
                                         <form class="container">
                                             <input [(ngModel)]="getTaskForEdit.endsOn._d" autocomplete="off" class="form-control" name="date" 
-                                            bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}">
+                                            bsDatepicker [bsConfig]="{dateInputFormat: 'MMMM'}">
                                             </form>
                                     </div>
                                     <div class="kt-radio-list eom-radio">
