--- a/angular/src/app/main/checklist/edit-task/edit-task.component.css
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.css
@@ -14,8 +14,10 @@
     overflow: auto;
 }
 .duplicate_box {
-    margin-left: 75px;
     margin-top: 50px
+}
+.duplicate_box button{
+    width:100%;
 }
 .commentViewBox {
     margin-left: 50px;
@@ -30,7 +32,7 @@
     margin-top: 20px;
 }
 .drop_down_class {
-    width: 175px;
+    width: 100%;
 }
 .drop_down_arrow {
     margin-left: 135px;
@@ -38,4 +40,13 @@
 ::ng-deep .uppy-Dashboard-inner {
     min-height:220px !important;
     height: 220px !important;
+}
+.btn.dropdown-toggle{
+    position: relative;
+}
+.btn.dropdown-toggle::after{
+    position: absolute !important;
+    right: 5px !important;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
 }
