--- a/angular/src/app/main/checklist/status/status.component.html
+++ b/angular/src/app/main/checklist/status/status.component.html
@@ -4,10 +4,13 @@
         {{StatusList}}
     </button>
     <div class="dropdown-menu drop_down_class"  aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" (click)="ChangeStatus(1)" >Open</a>
-        <a class="dropdown-item" (click)="ChangeStatus(2)" >Complete</a>
-        <a class="dropdown-item" (click)="ChangeStatus(3)" >Inprogress</a>
+        <a class="dropdown-item" (click)="ChangeStatus(1)" >Not Started</a>
+        <a class="dropdown-item" (click)="ChangeStatus(2)" >In Process</a>
+        <a class="dropdown-item" (click)="ChangeStatus(3)" >On Hold</a>
+        <a class="dropdown-item" (click)="ChangeStatus(4)" >Completed</a>
     </div>
 </div>
+
+
 
 
