--- a/angular/src/app/main/checklist/checklist.component.css
+++ b/angular/src/app/main/checklist/checklist.component.css
@@ -748,3 +748,32 @@ table.table.record-table td, table.table.record-table th {
 
 
 
+
+
+.date-picker {
+    position: relative;
+}
+.date-picker::after{
+    content:"";
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top:12px;
+    left: 13px;
+    background-image: url("/assets/media/ClosingCheckList/calendar.svg");
+}
+.date-picker input.date-field {
+    border: 0;
+    border-radius: 3px;
+    padding: 9px 10px 9px 32px;
+    line-height: 21px;
+    font-size: 14px;
+    box-sizing: border-box;
+    display: inline-block;
+    width: 140px;
+    position: relative;
+    background-color: #F1F2FC ;
+}
+
+
+
