Checklist detail screen Ui fixes

--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -59,7 +59,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="email"> Task Name</label>
-                                        <input type="email" class="form-control  bsDatepicker"
+                                        <input type="text" class="form-control  bsDatepicker"
                                             [(ngModel)]="checklist.taskName">
                                     </div>
                                 </div>
