--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -31,9 +31,9 @@
                                     Category <span
                                         class="bg-lightgrey badge badge-secondary bagesTextColor">{{taskDetailObject.categoryName}}</span>
                                     Closing Month <span
-                                        class="bg-lightgrey badge badge-secondary bagesTextColor">{{taskDetailObject.closingMonth | date:'MMM:y'}}</span>
+                                        class="bg-lightgrey badge badge-secondary bagesTextColor">{{taskDetailObject.closingMonth | date:'MMMM,yyyy'}}</span>
                                     Due By <span
-                                        class="bg-lightgrey badge badge-secondary bagesTextColor">{{taskDetailObject.endsOn | date:'d,MMMM, y'}}</span>
+                                        class="bg-lightgrey badge badge-secondary bagesTextColor">{{taskDetailObject.endsOn | date:'d MMMM, yyyy'}}</span>
                                 </div>
 
                             </div>
@@ -47,7 +47,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="attachment-box">
-                                        {{taskDetailObject.instruction}}
+                                        <!-- {{taskDetailObject.instruction}} -->
                                     </div>
                                 </div>
                             </div>
@@ -63,12 +63,12 @@
                             <div class="commentmainView show-comments">
                                 <div class="kt-widget3 ">
 
-                                    <div *ngFor="let i of taskDetailObject.comments" class="kt-widget3__item ">
+                                    <div *ngFor="let i of taskDetailObject.comments" class="show-comments-inner kt-widget3__item ">
                                         <div class="comments-header kt-widget3__header">
                                             <div class="kt-widget3__user-img">
                                                 <div class="kt-user-card-v2__pic">
                                                     <div class="kt-badge kt-badge--xl kt-badge--warning">
-                                                        {{i.NameAvatar}}</div>
+                                                        {{i.userName | firstLetterOfWords}}</div>
                                                 </div>
                                             </div>
                                             <div class="kt-widget3__info">
@@ -93,8 +93,7 @@
                                 <div (click)="commentClick()">
                                     <div class="kt-user-card-v2">
                                         <div class="kt-user-card-v2__pic">
-                                            <div class="kt-badge kt-badge--xl kt-badge--warning">{{userSignInName}}
-                                            </div>
+                                            <div class="kt-badge kt-badge--xl kt-badge--warning">{{userSignInName | firstLetterOfWords}}                                            </div>
                                         </div>
                                         <input [(ngModel)]="comment.body" class="form-control">
                                     </div>
@@ -130,16 +129,16 @@
                                         <option value="Febuary">Complete</option>
                                     </select> -->
                                     <div class="">
-                                        <app-status [StatusList]=taskDetailObject.taskStatus></app-status>
+                                        <app-status [TaskId]="recordId" [StatusList]=taskDetailObject.taskStatus></app-status>
 
                                     </div>
                                 </div>
                                 <div class="col-md-4">
+                                    <a class="action-btn"><i class="fas fa-edit" (click)="RedirectToEditTaskPage()"
+                                        style="color: #5867dd;"></i></a>
                                     <a class="action-btn" href="javascript:;" (click)="deleteTask()">
                                         <i class="fa fa-trash" style="color: #5867dd;"></i></a>
                                     <!-- <i class="fa fa-trash" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-                                    <a class="action-btn"><i class="fas fa-edit" (click)="RedirectToEditTaskPage()"
-                                            style="color: #5867dd;"></i></a>
                                     <a class="action-btn"><i class="fa fa-clone" aria-hidden="true"></i></a>
 
                                 </div>
