--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* / You can add global styles to this file, and also import other style files / */
 body,html{
     overflow: auto !important;
     color: #B5B7C7 !important;
@@ -80,7 +80,7 @@ body,html{
     width: 100%;
 }
 
-/* Sweet alert */
+/* / Sweet alert / */
 
 .swal2-title {
     display: inline-block !important;
@@ -103,14 +103,14 @@ body.swal2-height-auto {
     margin-bottom: 4px !important; 
 }
 
-/*  global styles for tables */
+/* /  global styles for tables / */
 body .ui-table .ui-table-thead > tr,
 body .ui-table .ui-table-tbody > tr{
     border-bottom: 1px solid #f1f2fc !important;
 }
 body .ui-table .ui-table-tbody > tr td,
 body .ui-table .ui-table-thead > tr th{
-    /* padding: 10px 30px !important; */
+    /* / padding: 10px 30px !important; / */
     vertical-align: middle;
 }
 body .ui-table .ui-table-thead > tr > th,
@@ -121,7 +121,7 @@ body .ui-table .ui-table-tbody > tr:nth-child(even){
 .kt-user-card-v2 .kt-user-card-v2__pic .kt-badge{
     margin-right: 10px;
 }
-/*  global styles ends here */
+/* /  global styles ends here / */
 @keyframes glowing {
     0% {
         opacity: .3;
@@ -160,9 +160,9 @@ body .ui-table .ui-table-tbody > tr:nth-child(even){
 }
 .task-table-inner th{
     background-color: transparent !important; 
-    /* font-weight: 500 !important;   */
+    /* / font-weight: 500 !important;   / */
     color:#575962 !important;
-    /* width:20%; */
+    /* / width:20%; / */
 }
 .task-table-inner th:focus{ 
     color:#8397ff!important;
@@ -209,11 +209,12 @@ body .ui-table .ui-table-tbody > tr:nth-child(even){
     margin-bottom: 2rem;
 }
 .show-comments {
-    height: 100px;
+    height: 180px;
     overflow: auto;
     margin-bottom: 20px;
     position: relative;
     word-break: break-all;
+    padding: 0 20px 0 5px;
 }
 .create-comments {
     height: 130px;
@@ -320,7 +321,7 @@ form.task-report-form{
     position: relative;
 }
 form.task-report-form::after{
-    /* content: "▼"; */
+    /* content: "▼";  */
     content: ">";
     position: absolute;
     top: 3px;
@@ -406,4 +407,7 @@ form.task-report-form::after{
         display: none !important;
     }
 
+}
+.input-group-prepend select {
+    border-radius: 0 4px 4px 0;
 }
